tests/fixtures/positive/release-engineering/build-config-debug-in-library/lib/src/main/java/com/example/BuildConfigDebugInLibrary.kt
package com.example

fun emitDebugLog() {
    if (BuildConfig.DEBUG) {
        println("debug only")
    }
}
