tests/fixtures/negative/empty-blocks/EmptyIfBlock.kt
package fixtures.negative.emptyblocks

fun check(condition: Boolean) {
    if (condition) {
        doWork()
    }
}
